# Carte

./: CMakeLists.txt  README.md  build.sh
Datas/: guerledan_sansshading.pgm  rade.pgm  test.txt
include/: Kart.h  Math.h  colourmanager.h
src/: Kart.cpp  carte.pgm  delaunator.hpp  main.cpp  main2.cpp
test/: CMakeLists.txt  Math.cpp  build_test.sh  readme.txt  test.cpp
